@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>4.0.3</version> 
+        <version>4.0.5</version> 
         <relativePath/> 
     </parent>
     <groupId>vn.edu.uit.msshop</groupId>
@@ -45,6 +45,8 @@
     <properties>
         <java.version>25</java.version>
         <spring-cloud.version>2025.1.0</spring-cloud.version>
+        <nullaway.version>0.13.1</nullaway.version>
+        <error-prone.version>2.48.0</error-prone.version>
     </properties>
 
     <dependencyManagement>
@@ -103,7 +105,29 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </path>
+                        <path>
+                            <groupId>com.uber.nullaway</groupId>
+                            <artifactId>nullaway</artifactId>
+                            <version>${nullaway.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>${error-prone.version}</version>
+                        </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.compiler,jdk.net</arg>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>--should-stop=ifError=FLOW</arg>
+                        <arg>
+                            -Xplugin:ErrorProne \
+                            -Xep:NullAway:ERROR \
+                            -XepOpt:NullAway:AnnotatedPackages=vn.edu.uit.msshop \
+                            -XepOpt:NullAway:JSpecifyMode=true \
+                        </arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -117,6 +141,10 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <jvmArguments>
+                        --add-modules jdk.net 
+                        -Duser.timezone=UTC
+                    </jvmArguments>
                 </configuration>
             </plugin>
 
@@ -124,7 +152,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Duser.timezone=UTC</argLine>
+                    <argLine>
+                        @{argLine}
+                        --add-modules jdk.net
+                        -Duser.timezone=UTC
+                    </argLine>
                 </configuration>
             </plugin>
 
